# hackathon_codegryphon_2026

./: .gitignore  README.md
StatementGraph/: .env.example  docker-compose.yml
StatementGraph/backend/: Dockerfile  pyproject.toml
StatementGraph/backend/app/: __init__.py  main.py
StatementGraph/backend/app/api/: __init__.py
StatementGraph/backend/app/api/v1/: router.py
StatementGraph/backend/app/api/v1/endpoints/: __init__.py  alerts.py  graph.py  health.py  merchant_resolution.py  statements.py  transactions.py
StatementGraph/backend/app/core/: config.py
StatementGraph/backend/app/db/: session.py
StatementGraph/backend/app/models/: __init__.py  alert.py  base.py  merchant.py  statement.py  transaction.py
StatementGraph/backend/app/repositories/: __init__.py  alert_repository.py  statement_repository.py  transaction_repository.py
StatementGraph/backend/app/schemas/: __init__.py  alert.py  graph.py  statement.py  transaction.py
StatementGraph/backend/app/services/: __init__.py  llm_analysis.py  statement_workflow.py
StatementGraph/backend/app/services/detection/: __init__.py  risk_engine.py
StatementGraph/backend/app/services/graph/: __init__.py  graph_builder.py
StatementGraph/backend/app/services/normalization/: __init__.py  normalizer.py
StatementGraph/backend/app/services/parsers/: __init__.py  statement_pdf_parser.py
StatementGraph/backend/tests/: conftest.py  test_graph_builder.py  test_normalizer.py  test_pdf_parser.py  test_risk_engine.py  test_statements_pipeline.py
StatementGraph/frontend/: Dockerfile  index.html  package.json
(+10 files in other folders)
