[project]
name = "statementgraph-backend"
version = "0.1.0"
description = "StatementGraph Cards backend API"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "psycopg[binary]>=3.1.18,<4.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pandas>=2.2.2,<3.0.0",
  "numpy>=2.0.0,<3.0.0",
  "pdfplumber>=0.11.0,<1.0.0",
  "networkx>=3.3,<4.0",
  "neo4j>=5.21.0,<6.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "ollama>=0.4.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
  "types-networkx>=3.3.0.20240705"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
